sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/Procurement_Tracking_Sheet__c.object-meta.xml
<CustomObject>
    <label>Procurement Request</label>
    <nameField>
        <displayFormat>PR-{00000000}</displayFormat>
        <label>Procurement Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Procurement Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>