sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/All_Steps__c.field-meta.xml
<CustomField>
    <fullName>All_Steps__c</fullName>
    <label>All Steps</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>QHSE Approval</fullName>
            </value>
            <value>
                <fullName>Pending Team Lead Approval</fullName>
            </value>
            <value>
                <fullName>Pending Finance Approval</fullName>
            </value>
            <value>
                <fullName>Pending Procurement Approval</fullName>
            </value>
            <value>
                <fullName>Completed: Pending PO</fullName>
            </value>
            <value>
                <fullName>Partial PO(s) created</fullName>
            </value>
            <value>
                <fullName>All POs created &amp; Partial Receipts</fullName>
            </value>
            <value>
                <fullName>All POs created &amp; All Receipts</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>