sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/Approving_Team_Lead__c.field-meta.xml
<CustomField>
    <fullName>Approving_Team_Lead__c</fullName>
    <formula>Team_Ld__r.FirstName &amp;&quot;  &quot;&amp; Team_Ld__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approving Team Lead</label>
    <type>Text</type>
</CustomField>