sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/Asset_Maintenance_Task__c.field-meta.xml
<CustomField>
    <fullName>Asset_Maintenance_Task__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset Maintenance Task</label>
    <referenceTo>Asset_Maintenance_Task__c</referenceTo>
    <relationshipLabel>Procurement Requests</relationshipLabel>
    <relationshipName>Procurement_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>