sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/Count_all_PR_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Count_all_PR_Line_Items__c</fullName>
    <label>Count all PR Line Items</label>
    <summaryForeignKey>PTS_Line_Item__c.Procurement_Tracking_Sheet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>