sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/Count_of_Lines_in_Pending_Sourcing__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Lines_in_Pending_Sourcing__c</fullName>
    <label>Count of Lines in Pending Sourcing</label>
    <summaryFilterItems>
        <field>PTS_Line_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Pending Sourcing</value>
    </summaryFilterItems>
    <summaryForeignKey>PTS_Line_Item__c.Procurement_Tracking_Sheet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>