sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/Count_PR_Line_Items_Canceled__c.field-meta.xml
<CustomField>
    <fullName>Count_PR_Line_Items_Canceled__c</fullName>
    <label>Count PR Line Items Canceled</label>
    <summaryFilterItems>
        <field>PTS_Line_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Cancelled</value>
    </summaryFilterItems>
    <summaryForeignKey>PTS_Line_Item__c.Procurement_Tracking_Sheet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>