sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/Count_PR_Line_Items_Partially__c.field-meta.xml
<CustomField>
    <fullName>Count_PR_Line_Items_Partially__c</fullName>
    <label>Count PR Line Items Partially</label>
    <summaryFilterItems>
        <field>PTS_Line_Item__c.PR_Line_Receipt_Status__c</field>
        <operation>equals</operation>
        <value>Items Partially Received</value>
    </summaryFilterItems>
    <summaryForeignKey>PTS_Line_Item__c.Procurement_Tracking_Sheet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>