sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/currencyFormulaField__c.field-meta.xml
<CustomField>
    <fullName>currencyFormulaField__c</fullName>
    <formula>TEXT(CurrencyIsoCode)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Currency</label>
    <type>Text</type>
</CustomField>