sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/Finance_Approval__c.field-meta.xml
<CustomField>
    <fullName>Finance_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <description>True if amount is less or equal to 20k or approved by finance</description>
    <label>Finance Approval</label>
    <type>Checkbox</type>
</CustomField>