sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/FinanceTl__c.field-meta.xml
<CustomField>
    <fullName>FinanceTl__c</fullName>
    <formula>AND( Requesting_Department__r.Name  = &quot;Finance&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FinanceTl</label>
    <type>Checkbox</type>
</CustomField>