sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/High_Priority_Comments__c.field-meta.xml
<CustomField>
    <fullName>High_Priority_Comments__c</fullName>
    <label>High Priority Comments</label>
    <type>TextArea</type>
</CustomField>