sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/Is_Item_Type_Blank__c.field-meta.xml
<CustomField>
    <fullName>Is_Item_Type_Blank__c</fullName>
    <description>How many times [Item Type] field is left blank on the PR Line Items</description>
    <inlineHelpText>How many times [Item Type] field is left blank on the PR Line Items</inlineHelpText>
    <label>Is Item Type Blank</label>
    <summarizedField>PTS_Line_Item__c.Is_Item_Type_Blank__c</summarizedField>
    <summaryForeignKey>PTS_Line_Item__c.Procurement_Tracking_Sheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>