sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/Is_Retrospective__c.field-meta.xml
<CustomField>
    <fullName>Is_Retrospective__c</fullName>
    <label>Is Retrospective?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>