sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/Maintenance_TL__c.field-meta.xml
<CustomField>
    <fullName>Maintenance_TL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Maintenance TL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Procurement_Tracking_Sheets1</relationshipName>
    <type>Lookup</type>
</CustomField>