sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/Next_Step_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Due_Date__c</fullName>
    <description>The Due Date when the PR should be approved</description>
    <inlineHelpText>The Due Date when the PR should be approved</inlineHelpText>
    <label>Next Step Due Date</label>
    <type>DateTime</type>
</CustomField>