sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/No_of_Items_received__c.field-meta.xml
<CustomField>
    <fullName>No_of_Items_received__c</fullName>
    <description>The number of items which have been received</description>
    <label>No. of Items received</label>
    <summarizedField>PTS_Line_Item__c.Qty_Delivered__c</summarizedField>
    <summaryForeignKey>PTS_Line_Item__c.Procurement_Tracking_Sheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>