sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/No_of_items_with_PO_Created_status__c.field-meta.xml
<CustomField>
    <fullName>No_of_items_with_PO_Created_status__c</fullName>
    <description>No of line items with &#39;PO Created&#39; status</description>
    <inlineHelpText>No of line items with &#39;PO Created&#39; status</inlineHelpText>
    <label>No of items with PO Created status</label>
    <summaryFilterItems>
        <field>PTS_Line_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Purchase Order Created</value>
    </summaryFilterItems>
    <summaryForeignKey>PTS_Line_Item__c.Procurement_Tracking_Sheet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>