sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/No_of_line_items_with_received_status__c.field-meta.xml
<CustomField>
    <fullName>No_of_line_items_with_received_status__c</fullName>
    <description>the number of items with received status</description>
    <label>No of line items with received status</label>
    <summaryFilterItems>
        <field>PTS_Line_Item__c.Status__c</field>
        <operation>equals</operation>
        <value>Received</value>
    </summaryFilterItems>
    <summaryForeignKey>PTS_Line_Item__c.Procurement_Tracking_Sheet__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>