sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <description>Shows the payment status of the Items</description>
    <inlineHelpText>Shows the payment status of the Items</inlineHelpText>
    <label>Payment Status</label>
    <length>120</length>
    <type>Text</type>
</CustomField>