sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/PO_Flag__c.field-meta.xml
<CustomField>
    <fullName>PO_Flag__c</fullName>
    <description>Total number of PO&#39;s not Created in the PR Line Items</description>
    <inlineHelpText>Total number of PO&#39;s not Created</inlineHelpText>
    <label>PO Flag</label>
    <summarizedField>PTS_Line_Item__c.PO_Flag__c</summarizedField>
    <summaryForeignKey>PTS_Line_Item__c.Procurement_Tracking_Sheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>