sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/PR_Source__c.field-meta.xml
<CustomField>
    <fullName>PR_Source__c</fullName>
    <label>PR Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Special Payment Request</fullName>
            </value>
            <value>
                <fullName>Recurring Service</fullName>
            </value>
            <value>
                <fullName>Asset Maintenance Task - PM</fullName>
            </value>
            <value>
                <fullName>Asset Maintenance Task - BM</fullName>
            </value>
            <value>
                <fullName>Autonomous Maintenance Type -AM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>