sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/PTS_Type__c.field-meta.xml
<CustomField>
    <fullName>PTS_Type__c</fullName>
    <label>PTS Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Location Movement</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Inventory Location Movement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>