sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/QHSE_Checked__c.field-meta.xml
<CustomField>
    <fullName>QHSE_Checked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QHSE Checked</label>
    <type>Checkbox</type>
</CustomField>