sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/QHSE_Flag__c.field-meta.xml
<CustomField>
    <fullName>QHSE_Flag__c</fullName>
    <description>Total number of Non-Stock items in the PR Line Items</description>
    <inlineHelpText>Total number of Non-Stock items</inlineHelpText>
    <label>QHSE Flag</label>
    <summarizedField>PTS_Line_Item__c.QHSE_Flag__c</summarizedField>
    <summaryForeignKey>PTS_Line_Item__c.Procurement_Tracking_Sheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>