sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/Receipt_Flag__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Flag__c</fullName>
    <description>Total number of items not Received in the PR Line Items</description>
    <inlineHelpText>Total number of items not Received</inlineHelpText>
    <label>Receipt Flag</label>
    <summarizedField>PTS_Line_Item__c.Receipt_Flag__c</summarizedField>
    <summaryForeignKey>PTS_Line_Item__c.Procurement_Tracking_Sheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>