sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Request_Date__c</fullName>
    <formula>CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Date</label>
    <type>Date</type>
</CustomField>