sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/Requesting_Company__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requesting Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>company</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.isActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipLabel>Procurement Requests (Requesting Company)</relationshipLabel>
    <relationshipName>Procurement_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>