sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/Requesting_Department__c.field-meta.xml
<CustomField>
    <fullName>Requesting_Department__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>A lookup from the FFA confic_dim1 object</description>
    <label>Requesting Department</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>FFA_Config_Object__c.isActive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Teamlead__c</field>
            <operation>notEqual</operation>
            <value>null</value>
        </filterItems>
        <filterItems>
            <field>FFA_Config_Object__c.Type__c</field>
            <operation>equals</operation>
            <value>dim1</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>FFA_Config_Object__c</referenceTo>
    <relationshipName>Procurement_Tracking_Sheets</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>