sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/Requestor__c.field-meta.xml
<CustomField>
    <fullName>Requestor__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Requestor</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipName>Procurement_Tracking_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>