sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/Requestor_Type__c.field-meta.xml
<CustomField>
    <fullName>Requestor_Type__c</fullName>
    <label>Requestor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Employee</fullName>
                <default>true</default>
                <label>Employee</label>
            </value>
            <value>
                <fullName>Reorder Level</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>