sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/Required_Duration__c.field-meta.xml
<CustomField>
    <fullName>Required_Duration__c</fullName>
    <formula>Required_Date__c  -  DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>