sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/Restock_Request__c.field-meta.xml
<CustomField>
    <fullName>Restock_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To Identify Requests due to reorder level being hit</description>
    <label>Restock Request</label>
    <type>Checkbox</type>
</CustomField>