sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/RFE__c.field-meta.xml
<CustomField>
    <fullName>RFE__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RFE</label>
    <referenceTo>RFE__c</referenceTo>
    <relationshipName>Procurement_Tracking_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>