sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/Special_Payment_Request__c.field-meta.xml
<CustomField>
    <fullName>Special_Payment_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Special Payment Request</label>
    <referenceTo>Special_Procurement__c</referenceTo>
    <relationshipLabel>Procurement Requests</relationshipLabel>
    <relationshipName>Procurement_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>