sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/Team_Ld__c.field-meta.xml
<CustomField>
    <fullName>Team_Ld__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the user object</description>
    <label>Requesting Department TL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Procurement_Tracking_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>