sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/Team_Lead_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Team_Lead_Approval_Status__c</fullName>
    <inlineHelpText>a condition set following approval steps</inlineHelpText>
    <label>Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Pre-Approved</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Declined</fullName>
            </value>
            <value>
                <fullName>Approved By Maintenance Team Lead</fullName>
            </value>
            <value>
                <fullName>Declined By Maintenance Team Lead</fullName>
            </value>
            <value>
                <fullName>Declined By Requesting Department Team Lead</fullName>
            </value>
            <value>
                <fullName>Approved By Finance</fullName>
            </value>
            <value>
                <fullName>Declined By Finance</fullName>
            </value>
            <value>
                <fullName>Approved By Requesting Department Team Lead</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>