sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/Time_QHSE_Approved__c.field-meta.xml
<CustomField>
    <fullName>Time_QHSE_Approved__c</fullName>
    <label>Time QHSE Approved</label>
    <type>DateTime</type>
</CustomField>