sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/TIme_SUbmited_to_QHSE__c.field-meta.xml
<CustomField>
    <fullName>TIme_SUbmited_to_QHSE__c</fullName>
    <label>TIme SUbmited to QHSE</label>
    <type>DateTime</type>
</CustomField>