sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/Time_Taken_to_Approve__c.field-meta.xml
<CustomField>
    <fullName>Time_Taken_to_Approve__c</fullName>
    <formula>Time_QHSE_Approved__c  -  TIme_SUbmited_to_QHSE__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Taken to Approve(Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>