sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/fields/Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount__c</fullName>
    <label>Total Kenya Shillings (KES)</label>
    <summarizedField>PTS_Line_Item__c.Estimate__c</summarizedField>
    <summaryForeignKey>PTS_Line_Item__c.Procurement_Tracking_Sheet__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>