sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/recordTypes/PTS_after_approval.recordType-meta.xml
<RecordType>
    <fullName>PTS_after_approval</fullName>
    <active>true</active>
    <label>PTS after approval</label>
</RecordType>