sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/recordTypes/PTS_before_approval.recordType-meta.xml
<RecordType>
    <fullName>PTS_before_approval</fullName>
    <active>true</active>
    <label>PTS before approval</label>
</RecordType>