sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/validationRules/CompanyValidationOnPR.validationRule-meta.xml
<ValidationRule>
    <fullName>CompanyValidationOnPR</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(Requesting_Company__r.Type__c = &quot;company&quot;  )</errorConditionFormula>
    <errorDisplayField>Requesting_Company__c</errorDisplayField>
    <errorMessage>Please select Company</errorMessage>
</ValidationRule>