sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/validationRules/HighPriorityCommentsValidation.validationRule-meta.xml
<ValidationRule>
    <fullName>HighPriorityCommentsValidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL( Priority__c , &quot;High&quot;) ,
 ISBLANK( High_Priority_Comments__c ) )</errorConditionFormula>
    <errorDisplayField>High_Priority_Comments__c</errorDisplayField>
    <errorMessage>Please explain the reason for the urgent procurement request and what process changes can be made to avoid emergency requests in future</errorMessage>
</ValidationRule>