sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/validationRules/LineItemsAfterPTSApproval.validationRule-meta.xml
<ValidationRule>
    <fullName>LineItemsAfterPTSApproval</fullName>
    <active>true</active>
    <description>Line Items cannot be added after PTS Approval</description>
    <errorConditionFormula>AND( ISPICKVAL( Team_Lead_Approval_Status__c , &#39;Approved&#39;)  ,
ISCHANGED( No_of_Line_Items__c ) )</errorConditionFormula>
    <errorMessage>Line Items cannot be added or removed after PTS Approval</errorMessage>
</ValidationRule>