sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/validationRules/RequiredDateNotLessThanToday.validationRule-meta.xml
<ValidationRule>
    <fullName>RequiredDateNotLessThanToday</fullName>
    <active>false</active>
    <description>Required date should not be in the past compared to Request date.</description>
    <errorConditionFormula>AND( Required_Date__c  &lt;   DATEVALUE( CreatedDate ) )</errorConditionFormula>
    <errorDisplayField>Required_Date__c</errorDisplayField>
    <errorMessage>Required Date cannot be in the past.</errorMessage>
</ValidationRule>