sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/validationRules/Validate_Team_lead_approval_status_empty.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Team_lead_approval_status_empty</fullName>
    <active>true</active>
    <errorConditionFormula>ISPICKVAL(Team_Lead_Approval_Status__c,&quot;&quot;)</errorConditionFormula>
    <errorDisplayField>Team_Lead_Approval_Status__c</errorDisplayField>
    <errorMessage>Select an appropriate choice for this field</errorMessage>
</ValidationRule>