sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/validationRules/Validate_TL_approval.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_TL_approval</fullName>
    <active>true</active>
    <description>Validate the Team Lead Approval</description>
    <errorConditionFormula>AND(
 ISPICKVAL(Team_Lead_Approval_Status__c,&quot;Approved&quot;) ,
 No_of_Line_Items__c&lt;1
)</errorConditionFormula>
    <errorDisplayField>Team_Lead_Approval_Status__c</errorDisplayField>
    <errorMessage>Line items have to be added before Team Lead can approve</errorMessage>
</ValidationRule>