sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/validationRules/Validate_TL_approval_Identity.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_TL_approval_Identity</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
   ISCHANGED(  Team_Lead_Approval_Status__c ),
     $User.Email  &lt;&gt;    00ND00000066kL2.00ND0000005eyUK.00ND0000005e4JB 
)</errorConditionFormula>
    <errorDisplayField>Team_Lead_Approval_Status__c</errorDisplayField>
    <errorMessage>Only the specified Team Lead can change this field</errorMessage>
</ValidationRule>