sfSandBoxCode/force-app/main/default/objects/Procurement_Tracking_Sheet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Team_Lead_Approval_Status__c</columns>
    <columns>Maintenance_Department__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Requesting_Department__c</columns>
    <columns>Requestor__c</columns>
    <columns>Approving_Team_Lead__c</columns>
    <columns>Required_Date__c</columns>
    <columns>Stage__c</columns>
    <columns>Total_Amount__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>Requesting_Company__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>